crates/plotnik-tests/tests/04-emit/bytecode/binding/bare_supertype_quantified.txt
Q = (program
  (statement)* @s
)
------------------ DIAGNOSTICS -------------------
error: `statement` is a supertype, not a node kind
 --> query.ptk:2:4
  |
2 |   (statement)* @s
  |    ^^^^^^^^^
  |
help: match the concrete subtypes with an alternation, e.g. `[(a) (b)]`
help: subtypes of `statement`: `break_statement`, `continue_statement`, `debugger_statement`, `declaration`, `do_statement`, `empty_statement`, `export_statement`, `expression_statement`, ... (12 more)
